<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tooth.Activity.RaidersActivity">
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/title_bar"/>
        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="98px"
            android:background="@color/white">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30px"
                android:src="@mipmap/gps"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/raiders_1"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20px"/>
        </com.zhy.autolayout.AutoLinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:lineSpacingMultiplier="1.5"
            android:textColor="@color/black"
            android:layout_marginLeft="30px"
            android:text="@string/radiers_1_1"
            android:layout_marginRight="30px"
            android:layout_marginTop="15px"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginLeft="30px"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/radiers_1_2"
            android:layout_marginRight="30px"
            android:layout_marginTop="15px"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginLeft="30px"
            android:layout_marginTop="15px"
            android:lineSpacingMultiplier="1.5"
            android:layout_marginRight="30px"
            android:text="@string/radiers_1_3"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:lineSpacingMultiplier="1.5"
            android:textColor="@color/black"
            android:layout_marginLeft="30px"
            android:layout_marginTop="15px"
            android:layout_marginRight="30px"
            android:text="@string/radiers_1_4"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginLeft="30px"
            android:layout_marginTop="15px"
            android:lineSpacingMultiplier="1.5"
            android:layout_marginRight="30px"
            android:text="@string/radiers_1_5"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginLeft="30px"
            android:layout_marginTop="15px"
            android:layout_marginRight="30px"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/radiers_1_6"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginLeft="30px"
            android:layout_marginTop="15px"
            android:layout_marginRight="30px"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/radiers_1_7"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20px"
            android:background="@color/bg_color"
            android:layout_marginTop="20px"/>
        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="98px">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="30px"
                android:src="@mipmap/gps"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/raiders_2"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20px"/>
        </com.zhy.autolayout.AutoLinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginLeft="30px"
            android:layout_marginTop="10px"
            android:layout_marginRight="30px"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/raiders_2_1"/>

    </com.zhy.autolayout.AutoLinearLayout>
</RelativeLayout>
