<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tooth.Activity.AoutActivity">
    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">
        <include layout="@layout/titlebar1"/>

        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">
            <ImageView
                android:id="@+id/img"
                android:layout_width="150px"
                android:layout_height="150px"
                android:layout_centerInParent="true"
                android:src="@mipmap/gywm"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="V1.0.0"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/img"
                android:layout_marginTop="30px"
                android:background="@drawable/text_shape"/>
        </com.zhy.autolayout.AutoRelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/bg_color"/>
        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">
            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50px"
                android:text="@string/about_1"/>
            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30px"
                android:layout_below="@+id/text1"
                android:text="@string/about_2"/>
            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30px"
                android:layout_below="@+id/text2"
                android:text="@string/about_3"/>

            <TextView
                android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30px"
                android:text="@string/aoubt_5"/>
            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/text5"
                android:layout_marginBottom="30px"
                android:text="@string/about_4"/>
        </com.zhy.autolayout.AutoRelativeLayout>
    </com.zhy.autolayout.AutoLinearLayout>
</RelativeLayout>
