<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.tooth.Activity.AccountBindActivity">
    <include layout="@layout/title_bar"/>
    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/account_bind_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        android:orientation="vertical">
        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60px"
            android:layout_marginLeft="30px">
            <TextView
                android:id="@+id/account_bind_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/account_bind_text"
                android:textSize="16sp"
                android:text="亲爱的微信用户："/>
            <TextView
                android:id="@+id/account_bind_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/account_bind_text"
                android:textSize="16sp"
                android:text="suhuangqiang"/>
        </com.zhy.autolayout.AutoLinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="40px"
            android:layout_marginLeft="30px"
            android:layout_marginBottom="45px"
            android:text="@string/Prompt"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line"
            />
        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:background="@color/white">
            <ImageView
                android:id="@+id/account_bind_phone"
                android:layout_width="45px"
                android:layout_height="45px"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40px"
                android:layout_alignParentLeft="true"
                android:src="@mipmap/phone_1"/>
            <Button
                android:id="@+id/account_bind_getcode"
                android:layout_width="180px"
                android:layout_height="68px"
                android:text="@string/get_code"
                android:textSize="12sp"
                android:textColor="@color/line"
                android:background="@color/getcode"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="30px"
                />
            <EditText
                android:id="@+id/account_bind_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/account_bind_phone"
                android:layout_toLeftOf="@+id/account_bind_getcode"
                android:background="@null"
                android:hint="@string/input_phone_number"
                android:textColor="@color/line"
                android:textColorHint="@color/line"
                android:textCursorDrawable="@null"
                android:paddingLeft="20px"
                android:textSize="20sp"
                android:inputType="phone"
                android:maxLength="11"
                />
        </com.zhy.autolayout.AutoRelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line"/>
        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:background="@color/white">
            <ImageView
                android:id="@+id/account_bind_codeImg"
                android:layout_width="45px"
                android:layout_height="45px"
                android:layout_centerVertical="true"
                android:layout_marginLeft="40px"
                android:layout_alignParentLeft="true"
                android:src="@mipmap/ok_1"/>
            <EditText
                android:id="@+id/account_bind_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/account_bind_codeImg"
                android:layout_marginRight="30px"
                android:background="@null"
                android:hint="@string/input_code"
                android:textColor="@color/line"
                android:textColorHint="@color/line"
                android:textCursorDrawable="@null"
                android:paddingLeft="20px"
                android:textSize="20sp"
                android:inputType="phone"
                android:maxLength="11"
                />
        </com.zhy.autolayout.AutoRelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line"/>

        <Button
            android:id="@+id/account_bind_sure"
            android:layout_width="match_parent"
            android:layout_height="96px"
            android:text="@string/sure"
            android:textColor="@color/white"
            android:layout_marginTop="50px"
            android:layout_marginRight="30px"
            android:layout_marginLeft="30px"
            android:background="@color/title_bar_blue"
            android:textSize="22sp"/>
    </com.zhy.autolayout.AutoLinearLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/account_bind_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        android:visibility="gone">
        <Button
            android:id="@+id/account_bind_login"
            android:layout_width="match_parent"
            android:layout_height="96px"
            android:text="@string/login_now"
            android:textColor="@color/white"
            android:layout_marginTop="50px"
            android:layout_marginRight="30px"
            android:layout_marginLeft="30px"
            android:background="@color/title_bar_blue"
            android:layout_centerVertical="true"
            android:textSize="22sp"/>
        <TextView
            android:id="@+id/t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/bind_succss"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:layout_above="@+id/account_bind_login"
            android:layout_marginBottom="30px"
            />
        <TextView
            android:id="@+id/account_bind_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:layout_above="@+id/t"
            android:layout_marginBottom="40px"
            android:text="13655945593"
            android:textColor="@color/account_bind_text"
            />
    </com.zhy.autolayout.AutoRelativeLayout>
</LinearLayout>
