<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_color"
    tools:context="com.example.tooth.Activity.SearchActivity">
    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="98px"
        android:background="@color/white">
        <TextView
            android:id="@+id/activity_search_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30px"
            android:textSize="16sp"
            android:text="@string/cancel"/>
        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70px"
            android:background="@color/bg_color"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/activity_search_cancel"
            android:layout_marginLeft="30px"
            android:layout_marginRight="20px">
            <ImageView
                android:id="@+id/img"
                android:layout_width="40px"
                android:layout_height="40px"
                android:layout_centerVertical="true"
                android:src="@mipmap/search"
                android:layout_marginLeft="20px"/>
            <EditText
                android:id="@+id/activity_search_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/img"
                android:background="@null"
                android:hint="@string/input_text"
                android:paddingLeft="20px"
                />
        </com.zhy.autolayout.AutoRelativeLayout>
    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/activity_search_no"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <ImageView
            android:id="@+id/nullImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200px"
            android:src="@mipmap/no"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/nullImg"
            android:layout_marginTop="50px"
            android:text="@string/no"
            />
    </com.zhy.autolayout.AutoRelativeLayout>
    <ListView
        android:id="@+id/activity_search_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>


</com.zhy.autolayout.AutoLinearLayout>
