<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tooth.Activity.LoginActivity"
    android:background="@mipmap/login_bj">
    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/activity_login_head_img"
                android:layout_width="150px"
                android:layout_height="150px"
                android:layout_gravity="center_horizontal"
                android:background="@mipmap/head"
                android:layout_marginTop="120px"
                android:layout_marginBottom="100px"/>
            <com.zhy.autolayout.AutoRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="78px"
                android:layout_marginBottom="10px">
                <ImageView
                    android:id="@+id/login_phone"
                    android:layout_width="45px"
                    android:layout_height="45px"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/phone"
                    />
                <EditText
                    android:id="@+id/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@+id/login_phone"
                    android:layout_toLeftOf="@+id/login_getcode"
                    android:background="@null"
                    android:hint="@string/input_phone_number"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@null"
                    android:paddingLeft="20px"
                    android:textSize="20sp"
                    android:inputType="phone"
                    android:maxLength="11"
                    />
                <Button
                    android:id="@+id/login_getcode"
                    android:layout_width="180px"
                    android:layout_height="68px"
                    android:text="@string/get_code"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:background="@mipmap/open_1"
                    android:layout_alignParentRight="true"/>


            </com.zhy.autolayout.AutoRelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/white"
                android:layout_marginBottom="20px"/>
            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="match_parent"
                android:layout_height="78px">
                <ImageView
                    android:id="@+id/login_codeImg"
                    android:layout_width="45px"
                    android:layout_height="45px"
                    android:src="@mipmap/ok"
                    android:layout_gravity="center_vertical"/>
                <EditText
                    android:id="@+id/login_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/input_code"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@null"
                    android:paddingLeft="20px"
                    android:textSize="20sp" />

            </com.zhy.autolayout.AutoLinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/white"/>
            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="78px"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/login_btn"
                android:background="@mipmap/open_2"
                android:textColor="@color/white"
                android:layout_marginTop="60px"
                />



        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30px">
            <com.zhy.autolayout.AutoRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="130px">
                <TextView
                    android:id="@+id/login_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:text="@string/choose_other_login"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="30px"
                    android:layout_marginRight="30px"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="1px"
                    android:background="@color/white"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/login_text"
                    android:layout_marginLeft="30px"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="1px"
                    android:background="@color/white"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/login_text"
                    android:layout_marginRight="30px"
                    />
            </com.zhy.autolayout.AutoRelativeLayout>

            <com.zhy.autolayout.AutoRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50px">
                <com.zhy.autolayout.AutoLinearLayout
                    android:id="@+id/login_weixin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="80px">
                    <ImageView
                        android:layout_width="80px"
                        android:layout_height="80px"
                        android:layout_gravity="center_horizontal"
                        android:src="@mipmap/weix"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/weixin_login"
                        android:layout_marginTop="5px"/>
                </com.zhy.autolayout.AutoLinearLayout>

                <com.zhy.autolayout.AutoLinearLayout
                    android:id="@+id/login_qq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="80px">
                    <ImageView
                        android:layout_width="80px"
                        android:layout_height="80px"
                        android:layout_gravity="center_horizontal"
                        android:src="@mipmap/qq_login"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:text="@string/qq_login"
                        android:layout_marginTop="5px"/>
                </com.zhy.autolayout.AutoLinearLayout>
            </com.zhy.autolayout.AutoRelativeLayout>
        </com.zhy.autolayout.AutoLinearLayout>
    </com.zhy.autolayout.AutoRelativeLayout>


</RelativeLayout>
